--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	z-index: 100000000000000000000;
+	z-index: 40;
 }
 
 .PhoneInputInput {
